<resources>
    <string name="app_name">Quote It!</string>

    <!-- LOGIN -->
    <string name="prompt_email">Introduce tu correo electrónico</string>
    <string name="prompt_password">Introduce tu contraseña</string>
    <string name="prompt_login">Iniciar Sesión</string>
    <string name="prompt_create_account">Crear una nueva cuenta</string>
    <string name="prompt_register">Registrarse</string>
    <string name="prompt_username">Introduce un nombre de usuario</string>
    <string name="prompt_confirm_password">Confirma la contraseña</string>
    <string name="prompt_confirm_new_password">Confirma la nueva contraseña</string>

    <!-- MENU ITEMS -->
    <string name="home_label">Mis frases</string>
    <string name="discover_label">Descubrir</string>
    <string name="community_label">Comunidad</string>
    <string name="profile_label">Perfil</string>
    <string name="settings_label">Configuración</string>

    <!-- SETTINGS MENU -->
    <string name="account_settings">Cuenta</string>
    <string name="change_password_settings">Cambiar contraseña</string>
    <string name="delete_account_settings">Eliminar cuenta</string>
    <string name="confirm_delete_account">¿Estás seguro de que deseas eliminar esta cuenta? Todo el contenido será eliminado y no podrá ser recuperado</string>
    <string name="close_session_settings">Cerrar Sesión</string>
    <string name="about_settings">Acerca de</string>
    <string name="collaborators_settings">Colaboradores</string>
    <string name="general_settings">General</string>
    <string name="vibrate_settings">Permitir vibración</string>

    <!-- HOME FOLDERS -->
    <string name="folder_quantity">%1$d elementos</string>
    <string name="dialog_folder_new">Crear un grupo</string>
    <string name="prompt_new">Nombre del nuevo grupo</string>
    <string name="user_folder">Hechas por mi</string>
    <string name="fav_folder">Mis favoritos</string>

    <!-- HOME QUOTES -->
    <string name="change_folder_name">Cambiar Nombre</string>
    <string name="add_folder_quote">Nueva frase</string>
    <string name="delete_folder">Eliminar grupo</string>
    <string name="dialog_folder_modify">Cambiar nombre</string>
    <string name="confirm_folder_delete">¿Estás seguro de que deseas eliminar este grupo y todo su contenido?</string>
    <string name="confirm_quote_delete">¿Estás seguro de que deseas eliminar esta frase? Se eliminará tambien en todas las carpetas</string>

    <!-- HOME QUOTE FORM -->
    <string name="tip_new_quote">Tip: Agita tu dispositivo para limpiar los campos</string>
    <string name="form_quote_author">Nombre del Autor</string>
    <string name="form_quote_content">Contenido de la frase</string>
    <string name="form_quote_author_placeholder">Autor (Ej. Einstein, Roosevelt, Anónimo)</string>
    <string name="form_quote_content_placeholder">Introduce la nueva frase</string>

    <!-- IMAGE PREVIEW -->
    <string name="image_preview">Vista previa</string>
    <string name="image_saved">Imagen guardada</string>
    <string name="confirm_cancel">¿Estás seguro que deseas salir? Los cambios se verán deshechos</string>
    <string name="prompt_permissions">Habilita los permisos de almacenamiento para continuar</string>

    <!-- COMMUNITY -->
    <string name="likes_count">A %1$d personas le gustaron esto</string>
    <string name="new_post_title">Comparte algo que inspire a los demás</string>
    <string name="prompt_post">Publicar</string>
    <string name="prompt_new_post">Nueva publicación</string>
    <string name="confirm_post_delete">¿Estás seguro de que deseas eliminar esta publicación?</string>

    <!-- DISCOVER -->
    <string name="api_reference">Generated by Quotes API by Martin Svoboda</string>

    <!-- PROFILE -->
    <string name="prompt_my_likes">Mis me gusta</string>
    <string name="empty_profile">Aquí se mostrarán las publicaciones que hagas</string>

    <!-- ERRORS -->
    <string name="error_empty_email">Llena el campo de correo</string>
    <string name="error_empty_password">Introduce una contraseña</string>
    <string name="error_empty_fields">Llena los campos correctamente</string>
    <string name="error_invalid_passwords">Las contraseñas no coinciden</string>
    <string name="error_weak_password">La contraseña debe contener al menos 6 digitos</string>
    <string name="error">Algo salió mal, intenta de nuevo más tarde</string>

    <!-- WIDGETS -->
    <string name="widget_description">Descubre una frase nueva cada día</string>
    <string name="widget_qod_prompt">Frase del día</string>
    <string name="settings">Ajustes</string>

    <!-- MISCELLANEOUS -->
    <string name="go_back">Atrás</string>
    <string name="go_next">Siguiente</string>
    <string name="ok">OK</string>
    <string name="confirm">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="empty">Vacío</string>
    <string name="empty_favs">Aquí se mostrarán las frases que marques con</string>
    <string name="delete_quote">Eliminar frase</string>
    <string name="add_quote_to_folder">Añadir a otro grupo</string>
    <string name="share_quote">Compartir frase</string>
    <string name="do_image">Hacer imagen</string>
    <string name="added_to_favorites">Añadido a favoritos</string>
    <string name="removed_from_favorites">Eliminado de favoritos</string>
    <string name="added_to_folder">Añadido exitosamente</string>
    <string name="removed_from_folder">Removido exitosamente</string>
    <string name="select_image">Seleccionar una Imagen</string>
    <string name="share_with">Compartir</string>
    <string name="activate">Activar</string>
    <string name="shared_label">Enviado desde Quote it!</string>
    <string name="delete_post">Eliminar publicación</string>
    <string name="login_policy">Al iniciar sesión estás aceptando los <a href='https://quote-it-app.herokuapp.com/terms'>Términos y condiciones</a>, así como la <a href='https://quote-it-app.herokuapp.com/privacy'>Política de privacidad</a></string>
    <string name="register_policy">Al registrate estás aceptando los <a href='https://quote-it-app.herokuapp.com/terms'>Términos y condiciones</a>, así como la <a href='https://quote-it-app.herokuapp.com/privacy'>Política de privacidad</a></string>

</resources>