<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_settings"
        app:iconSpaceReserved="false">

        <Preference
            app:key="about"
            app:title="@string/collaborators_settings"
            app:iconSpaceReserved="false"
            app:fragment="com.example.quoteit.ui.settings.AboutUsFragment" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_settings"
        app:iconSpaceReserved="false">

        <Preference
            app:key="password"
            app:iconSpaceReserved="false"
            app:title="@string/change_password_settings" />

        <Preference
            app:key="session"
            app:iconSpaceReserved="false"
            app:title="@string/close_session_settings" />

    </PreferenceCategory>

</PreferenceScreen>