<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeNavigation"
        android:title="@string/home_label"
        android:enabled="true"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/communityFragment"
        android:title="@string/community_label"
        android:enabled="true"
        android:icon="@drawable/ic_community" />

    <item
        android:id="@+id/discoverFragment"
        android:title="@string/discover_label"
        android:enabled="true"
        android:icon="@drawable/ic_explore" />

    <item
        android:id="@+id/profileNavigation"
        android:title="@string/profile_label"
        android:enabled="true"
        android:icon="@drawable/ic_profile" />

</menu>
