<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeNavigation">

    <fragment
        android:id="@+id/communityFragment"
        android:name="com.quoteit.android.ui.community.CommunityFragment"
        android:label="@string/community_label"
        tools:layout="@layout/fragment_community" />
    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.quoteit.android.ui.discover.DiscoverFragment"
        android:label="@string/discover_label"
        tools:layout="@layout/fragment_discover" />

    <navigation android:id="@+id/homeNavigation"
        app:startDestination="@id/homeFragment">
        <fragment
            android:id="@+id/quotesListFragment"
            android:name="com.quoteit.android.ui.home.QuotesListFragment"
            tools:layout="@layout/fragment_quotes_list">
            <action
                android:id="@+id/action_quotesListFragment_to_newQuote"
                app:destination="@id/newQuote" />
        </fragment>
        <fragment
            android:id="@+id/homeFragment"
            android:name="com.quoteit.android.ui.home.HomeFragment"
            android:label="@string/home_label"
            tools:layout="@layout/fragment_home">
            <action
                android:id="@+id/action_homeFragment_to_quotesListFragment"
                app:destination="@id/quotesListFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right" />
            <action
                android:id="@+id/action_homeFragment_to_settingsFragment"
                app:destination="@id/settingsNavigation"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        </fragment>
        <fragment
            android:id="@+id/newQuote"
            android:name="com.quoteit.android.ui.home.NewQuoteFragment"
            android:label="@string/add_folder_quote"
            tools:layout="@layout/fragment_new_quote" />
        <navigation android:id="@+id/settingsNavigation"
            app:startDestination="@id/settingsFragment">
            <fragment
                android:id="@+id/settingsFragment"
                android:name="com.quoteit.android.ui.settings.SettingsFragment"
                android:label="@string/settings_label" >
                <action
                    android:id="@+id/action_settingsFragment_to_aboutUsFragment"
                    app:destination="@id/aboutUsFragment" />
                <action
                    android:id="@+id/action_settingsFragment_to_changePasswordFragment"
                    app:destination="@id/changePasswordFragment" />
            </fragment>
            <fragment
                android:id="@+id/aboutUsFragment"
                android:name="com.quoteit.android.ui.settings.AboutUsFragment"
                android:label="@string/collaborators_settings"
                tools:layout="@layout/fragment_about_us"/>
            <fragment
                android:id="@+id/changePasswordFragment"
                android:name="com.quoteit.android.ui.settings.ChangePasswordFragment"
                android:label="@string/change_password_settings"
                tools:layout="@layout/fragment_change_password" />
        </navigation>
    </navigation>
    <navigation android:id="@+id/profileNavigation"
        app:startDestination="@id/profileFragment">
        <fragment
            android:id="@+id/profileFragment"
            android:name="com.quoteit.android.ui.profile.ProfileFragment"
            android:label="@string/profile_label"
            tools:layout="@layout/fragment_profile" >
            <action
                android:id="@+id/action_profileFragment_to_likedPostsFragment"
                app:destination="@id/likedPostsFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        </fragment>
        <fragment
            android:id="@+id/likedPostsFragment"
            android:name="com.quoteit.android.ui.profile.LikedPostsFragment"
            android:label="fragment_liked_posts"
            tools:layout="@layout/fragment_liked_posts" />
    </navigation>

</navigation>