<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?attr/bottomSheetStyle"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="32dp"
        android:orientation="vertical"
        android:gravity="center">

            <TextView android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="@string/dialog_folder_new"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_folder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OutlinedTextInputLayout"
                app:placeholderText="@string/prompt_new">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:importantForAccessibility="no"
                    android:inputType="text"
                    android:maxLength="25"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MaterialButton"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:backgroundTint="@color/lighter_gray_no_alpha"
                    android:textColor="@color/white"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MaterialButton"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/confirm"
                    android:textAllCaps="false" />

            </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
